--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
   web:
     build: .
     container_name: fidden_web
+    working_dir: /app
     command: ["gunicorn", "fidden.wsgi:application", "--bind", "0.0.0.0:8090"]
     volumes:
       - ./:/app
@@ -19,6 +20,7 @@ services:
   celery:
     build: .
     container_name: fidden_celery
+    working_dir: /app
     command: celery -A fidden worker --loglevel=info
     volumes:
       - ./:/app
@@ -30,6 +32,7 @@ services:
   celery-beat:
     build: .
     container_name: fidden_celery_beat
+    working_dir: /app
     command: celery -A fidden beat --loglevel=info
     volumes:
       - ./:/app
