add fixtures in dockerfile add entrypoint.sh

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     container_name: fidden_web
     working_dir: /app
-    command: ["gunicorn", "fidden.wsgi:application", "--chdir", "/app", "--bind", "0.0.0.0:8090"]
+    command: ["gunicorn", "fidden.wsgi:application", "--bind", "0.0.0.0:8090"]
     volumes:
       - media:/app/media
       - staticfiles:/app/staticfiles
