--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       uvicorn fidden.asgi:application
       --host 0.0.0.0
       --port 8090
+      --ws websockets
     volumes:
       - ./media:/app/media
       - staticfiles:/app/staticfiles
