change on docker-compose for test redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     build: .
     container_name: fidden_celery
     working_dir: /app
-    command: celery -A fidden worker --loglevel=info
+    command: sh -c "./wait-for-redis.sh redis celery -A fidden worker --loglevel=info"
     volumes:
       - ./:/app
     depends_on:
@@ -52,9 +52,7 @@ services:
     build: .
     container_name: fidden_celery_beat
     working_dir: /app
-    command: >
-      sh -c "until python manage.py migrate; do echo 'Waiting for DB'; sleep 3; done;
-             celery -A fidden beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler"
+    command:  sh -c "./wait-for-redis.sh redis sh -c 'until python manage.py migrate; do echo Waiting for DB; sleep 3; done; celery -A fidden beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler'"
     volumes:
       - ./:/app
     depends_on:
