--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - "8090:8090"
     environment:
       - DJANGO_SETTINGS_MODULE=fidden.settings
+      - REDIS_URL=redis://redis:6379/0
     depends_on:
       - redis
     env_file:
@@ -41,6 +42,8 @@ services:
       - web
     env_file:
       - .env
+    environment:
+      - REDIS_URL=redis://redis:6379/0
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "celery -A fidden status || exit 1"]
@@ -60,6 +63,8 @@ services:
       - web
     env_file:
       - .env
+    environment:
+      - REDIS_URL=redis://redis:6379/0
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "ps aux | grep '[c]elery beat' || exit 1"]
